--- a/frontend/src/app/css/index.css
+++ b/frontend/src/app/css/index.css
@@ -1,10 +1,13 @@
 .tooltip {
   /* ... */
-  display: none;
+  /* display: none; */
+  opacity : 0;
 }
 
 .tooltip[data-show] {
+  opacity : 100%;
   display: block;
+
 }
 
 .arrow,
