--- a/frontend/src/app/css/index.css
+++ b/frontend/src/app/css/index.css
@@ -1,3 +1,5 @@
+
+/* ---- untuk TOOLTIP ---- */
 .tooltip {
   /* ... */
   /* display: none; */
@@ -42,4 +44,30 @@
 
 .tooltip[data-popper-placement^='right'] > .arrow {
   left: -4px;
+}
+
+
+
+/* --- untuk scroller --- */
+*::-webkit-scrollbar-track{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: transparent;
+  border-radius: 10px;
+  border: 3px solid white;
+}
+*::-webkit-scrollbar{
+  width: 6px;
+  height: 5px;
+}
+*::-webkit-scrollbar:hover{
+  width: 12px;
+}
+*::-webkit-scrollbar-thumb{
+  background-color: #34352F;
+  border-radius: 10px;
+  transition: all 1s;
+}
+*::-webkit-scrollbar-thumb:hover{
+  background-color: #414339;
+  border-radius: 0PX;
 }
